[package]
name = "script_to_ipynb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = "1"
ipynb_parse = { git = "https://github.com/ArvinSKushwaha/ipynb_parse" }
# ipynb_parse = { path = "../ipynb_parse" }
serde = "1"
serde_json = "1"
thiserror = "1"
